--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,19 @@
   box-shadow: 0 0 5px rgb(0, 0, 0,.5);
 }
 
+#tawkto-widget {
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+  z-index: 1000; /* Ensure it's above other content */
+}
+
+/* Adjust width and height if necessary */
+#tawkto-widget iframe {
+  width: 50px;
+  height: 50px;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
